Fixed missing colours on heat map

--- a/learnscripture/static/css/learnscripture.less
+++ b/learnscripture/static/css/learnscripture.less
@@ -1222,28 +1222,32 @@ ul.grouplist {
     height: 109px;
     .cal-heatmap-container {
         .q1 {
-            fill: #ededed;
             background-color: #ededed;
+            fill: #ededed;
         }
         .q2 {
 	        background-color: #dae289;
-	        fill: #dae289
+	        fill: #dae289;
         }
         .q3 {
 	        background-color: #cedb9c;
-	        fill: #9cc069
+	        fill: #9cc069;
         }
         .q4 {
 	        background-color: #b5cf6b;
-	        fill: #669d45
+	        fill: #669d45;
         }
         .q5 {
 	        background-color: #637939;
-	        fill: #637939
+	        fill: #637939;
         }
         .q6 {
 	        background-color: #3b6427;
-	        fill: #3b6427
+	        fill: #3b6427;
+        }
+        .q7 {
+	        background-color: #0c451c;
+	        fill: #0c451c;
         }
     }
 }
